--- a/wiki/lexiconophilist.wikitext
+++ b/wiki/lexiconophilist.wikitext
@@ -1,6 +1,6 @@
 =={{En}}==
 ===Noun===
-# One who loves [[dictionary|dictionaries]] and other [[book]s of [[word]]s.
+# One who loves [[dictionary|dictionaries]] and other [[book]]s of [[word]]s.
 
 ===Related terms===
 :[[Lexicon]], [[Lexiconophilia]]
