/* Etymology */ Fmt. <primate#53277>

--- a/wiki/primate.wikitext
+++ b/wiki/primate.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-[[Back-formation]] from the name of the [[order]], ''Primates'', the Latin plural of ''primas'', one of the first; excellent; noble
+[[Back-formation]] from the Latin name of the [[order]], '''[[Primates]]''', the plural of '''[[primas]]''', ''one of the first, excellent, noble''
 
 ===Noun===
 '''primate''' (''plural'' '''primates''')
