--- a/wiki/O%27odham.wikitext
+++ b/wiki/O%27odham.wikitext
@@ -16,7 +16,7 @@
 
 # an O'odham person
 # of the O'odham people
-# native american, not [[Milga:n]]
+# Native American, not [[Milga:n]]
 
 '''o'odham''' (lc)
 
