--- a/wiki/cowabunga.wikitext
+++ b/wiki/cowabunga.wikitext
@@ -1,17 +1,24 @@
 ==English==
 ===Etymology===
-From "kawabonga", bad, a nonsense word spoken by Chief Thunderthud, a character in ''The Howdy Doody Show'', altered to "cowabunga" by Australian surfers and popularized by Bart Simpson of ''The Simpsons'' (and the ''Teenage Muntant Ninja Turtles'' comic, tv, and movie series).
+From '''kawabonga''', ''bad''; a nonsense word spoken by Chief Thunderthud, a character in ''The Howdy Doody Show'', altered to "cowabunga" by Australian surfers and popularized by Bart Simpson of ''The Simpsons'' and the ''Teenage Muntant Ninja Turtles'' comic, TV, and movie series.
 
 ===Interjection===
+'''cowabunga!'''
 
-#A slang term used when amazed or surprised, often followed by the word man ''''eg ''cowabunga man, look at that crazy house''''
+#A slang term used when amazed or surprised, often followed by the word ''man''
+#:''Cowabunga, man! Look at that crazy house!''
+
+===See Also===
+*[[Howdy Doody]]
+*[[The Howdy Doody Show]]
+
 
 <!--
 === History ===
 
-Most baby boomers can tell you that the first time he or she heard cowabunga was on the Howdy Doody Show, which ran on television from 1947 to 1960.
+Most baby boomers can tell you that the first time he or she heard ''cowabunga'' was on the Howdy Doody Show, which ran on television from 1947 to 1960.
 
 Eddie Kean, the show's main writer until 1954, invented the characters Chief Thunderthud and Princess Summerfall Winterspring. Chief Thunderthud was supposedly the founder of Doodyville, and began sentences with the nonsense syllable kawa. Anything that was good was "kawagoopa"; anything that was bad was "kawabonga." 
 
-For reasons no one really knows, this word for 'bad' was adopted by Australian surfers in the 1960s. The spelling changed to 'cowabunga', and the term spread to surfers elsewhere. The term became more popular when used by the surfing "Teenage Mutant Ninja Turtles", a television cartoon show.
+For reasons no one really knows, this word for 'bad' was adopted by Australian surfers in the 1960s. The spelling changed to 'cowabunga', and the term spread to surfers elsewhere. The term became more popular when used by the surfing "Teenage Mutant Ninja Turtles", a television cartoon show, and also by Bart Simpson of ''The Simpsons''.
 -->
