--- a/wiki/rhinoceros.wikitext
+++ b/wiki/rhinoceros.wikitext
@@ -9,7 +9,7 @@ rhai-NOH-seh-ruhs
 
 ===Etymology===
 
-L rhinoceros, rhinocerontas, fr. Gk ''[[rhinos]]'' ([[ρίνο]]) nose + ''[[keras]]'' ([[κέρας]]), ''[[kerotes]]'' horn
+From Latin '''rhinoceros''', '''[[rhinocerontas]]''', from Greek '''[[rhinos]]''' ('''[[ρίνο]]'''), ''nose'', + '''[[keras]]''' ('''[[κέρας]]'''), '''[[kerotes]]''', ''horn''
 
 ===Noun===
 '''rhinoceros''' (''plural:'' rhinoceros, [[rhinoceroses]], or [[rhinoceri]]; ''diminutive:'' [[rhino]])
