--- a/wiki/orgasm.wikitext
+++ b/wiki/orgasm.wikitext
@@ -1,1 +1,1 @@
-An orgasm is when you're enjoying being fucked in the fanny.
+An orgasm is the climax of sexual activity. It usually occurs when a person releases sperm. This can produce momentary sexual pleasure. Both genders of the human species can have an orgasm, but the male's occurs much easier. The female orgasm usually takes longer to obtain, but has been said to be more pleasant and even more awarding. The male sperm released from an orgasm may cause reproduction, while the femele sperm still has no scientific use. It is still possible for the female to release sperm, though.
