--- a/wiki/buy.wikitext
+++ b/wiki/buy.wikitext
@@ -15,6 +15,8 @@
 ==== Synonyms ====
 *[[purchase]], [[acquire]]<!-- does acquier apply a transaction or just a syn of "receive"? -->
 
+[http://www.terfex.com Terfex.com - Buy Stuff]
+
 ====Antonyms====
 *[[sell]]
 
