--- a/wiki/pathogenicity.wikitext
+++ b/wiki/pathogenicity.wikitext
@@ -7,4 +7,4 @@
 #the [[quality]] or state of [[originating]] or [[producing]] [[disease]]
 
 ===Biological===
-the [[quality]] of a [[parasite]] to [[inflict]] [[damage]] on the [[host]]
+the [[quality]] of a [[organism]] to [[inflict]] [[damage]] on the [[host]]
