/* Related terms */ <table#38559>

--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -174,7 +174,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *[[log table]]
 *[[multiplication table]]
 *[[periodic table]]
-*[[pool table]]
+*[[pool pula]]
 *[[timetable]]
 *[[table tennis]]
 *[[tablet]]
