--- a/wiki/cloud.wikitext
+++ b/wiki/cloud.wikitext
@@ -5,7 +5,7 @@
 # a group of something
 
 ==== Translations ====
-
+*[[Arabic]] سحابة or غيمة
 *[[Albanian]]: [[re]] ''f''
 *[[Bavarian]]: [[Woikn]] ''f'' (1,2)
 *[[Breton]]: [[koumoul]] ''collective noun'' koumoulenn ''singular f''
