--- a/wiki/cloud.wikitext
+++ b/wiki/cloud.wikitext
@@ -18,7 +18,7 @@
 *German: [[Wolke]] ''f'' (1,2), [[Schleier]] ''m'' (3)
 *Greek: [[synnephia]], [[νέφος]] ([[nephos]])
 *[[Guarani]]: [[arai]] (1)
-*Hebrew: [[עב]] ''f''
+*Hebrew: [[ענן]] ''m''
 *Indonesian: [[awan]], [[mega]]
 *[[Interlingua]]: [[nube]] (1,2,3)
 *[[Irish]]:[[scamaill]]
