--- a/wiki/coyote.wikitext
+++ b/wiki/coyote.wikitext
@@ -17,7 +17,7 @@ Spanish
 *Italian: coyote ''m''
 *Japanese: [[コヨーテ]] (koyoote)
 *Korean: [[코요테]]
-*[[O'odham]]: [[Ban]]
+*[[O'odham]]: [[ban]]
 *{{pl}}: [[kojot]] ''m''
 *Portuguese: [[chacal]] ''m''
 *Russian: [[койот]] ''m'' (koyot)
