/* Noun */ some links <aerophobia#63788>

--- a/wiki/aerophobia.wikitext
+++ b/wiki/aerophobia.wikitext
@@ -1,3 +1,3 @@
 ==Noun==
 
-# Fear of drafts, air swallowing or airborne noxious substances.
+# Fear of [[draft]]s, [[air]] [[swallow]]ing or [[airborne]] [[noxious]] substances.
