--- a/wiki/one.wikitext
+++ b/wiki/one.wikitext
@@ -29,8 +29,9 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Albanian]]: [[një]]
+*[[Apache]] (Western): [[dałaá]]
 *[[Arabic]]: [[وَاحِد]] (waːħidun)
-*[[Aymara ]]: [[maya]]
+*[[Aymara]]: [[maya]]
 *[[Basque]]: [[bat]]
 *[[Bosnian]]: jedan ''m'', jedna ''f'', jedno ''n''
 *[[Breton]]: [[unan]]
@@ -69,11 +70,13 @@
 *[[Lingua Franca Nova]]: [[un]]
 *[[Lojban]]: [[pa]]
 *[[Manchu]]: [[emu]]
+*[[Maricopa]]: [[shenthik]]
 *[[Marshallese]]: [[juon]]
 *[[Minangkabau]]: [[Ciek]]
 *[[Nahuatl]]: [[ce]]
 *Norwegian ([[bokmål]]): [[en]]
 *Norwegian ([[nynorsk]]): [[ein]]
+*[[O'odham]]: [[hemako]]
 *[[Old English]]: [[an]]
 *[[Persian]]: [[يِک]] (yek)
 *[[Polish]]: [[jeden]]
