/* Translations */ albanian <woman#3729>

--- a/wiki/woman.wikitext
+++ b/wiki/woman.wikitext
@@ -14,6 +14,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Albanian: [[Grua]], [[femër]]
 *Arabic: [[مرأة]] (marʔa)
 *Aragonese: [[muller]] ''f''
 *Basque: [[emakume]]
