--- a/wiki/pumpkin.wikitext
+++ b/wiki/pumpkin.wikitext
@@ -25,6 +25,8 @@
 *[[Interlingua]]: [[cucurbita]] (1,2,3)
 *[[Japanese]]: [[カボチャ]] (kabocha)
 *[[Lojban]]: [[brazme]], [[kurbita]]
+*[[Maricopa]]: [[xmat]]
+*[[O'odham]]: [[ha:l]]
 *[[Portuguese]]: [[abóbora]] ''f'', ''Bras.'' [[jerimum]] ''m'', ''Science'' [[cucúrbita]] ''f'' (1,2); [[aboboreira]] ''f'', [[jerimunzeiro]] ''m'' (2); [[abóbora]] ''m'' (3)
 *[[Romanian]]: [[dovleac]] ''m'', [[bostan]] ''m''
 *[[Russian]]: [[тыква]] ''f'' (1,2)
