--- a/wiki/pumpkin.wikitext
+++ b/wiki/pumpkin.wikitext
@@ -26,7 +26,7 @@
 *[[Japanese]]: [[カボチャ]] (kabocha)
 *[[Lojban]]: [[brazme]], [[kurbita]]
 *[[Maricopa]]: [[xmat]]
-*[[O'odham]]: [[ha:l]]
+*[[O'odham]]: [[<nowiki>ha:l</nowiki>]]
 *[[Portuguese]]: [[abóbora]] ''f'', ''Bras.'' [[jerimum]] ''m'', ''Science'' [[cucúrbita]] ''f'' (1,2); [[aboboreira]] ''f'', [[jerimunzeiro]] ''m'' (2); [[abóbora]] ''m'' (3)
 *[[Romanian]]: [[dovleac]] ''m'', [[bostan]] ''m''
 *[[Russian]]: [[тыква]] ''f'' (1,2)
