--- a/wiki/about.wikitext
+++ b/wiki/about.wikitext
@@ -35,7 +35,7 @@ Old English ''aboute'', ''abouten'', ''abuten''; Anglo-Saxon ''&#257;butan'', ''
 #:*She must have her way '''about''' Sarah. - [[Trollope]]
 
 ====Translations====
-*[[Chemehuevi]]: [[-vacɨ]]
+*[[Chemehuevi]]: [[-vacɨ]] (1, 3)
 *Dutch: [[om]] (1), [[omheen]] (2), [[bij]] (2), in de buurt (2), [[rond]] (1,3), [[ongeveer]] (4), op het punt staan (6)
 *German: [[&uuml;ber]]
 *Indonesian: [[sekitar]], [[sekeliling]], [[kira|kira-kira]], [[dekat]], [[tentang]], [[kena|mengenai]], [[hendak]], [[akan]]
