--- a/wiki/afraid.wikitext
+++ b/wiki/afraid.wikitext
@@ -9,5 +9,8 @@ IPA: [[WEAE]] /ʌˈfɹaɪd/
 #Impressed with fear or apprehension; in fear; apprehensive. [Afraid comes after the noun it limits.]
 #:'''Note:''' This word expresses a less degree of fear than terrified or frightened. It is followed by of before the object of fear, or by the infinitive, or by a dependent clause; as, to be afraid of death. "I am afraid"; is sometimes used colloquially to soften a statement; as, '''I am afraid''' I can not help you in this matter.
 
+==Translations==
+*[[Chemehuevi]]: [[i'javaga]]
+
 ====Synonyms====
 [[Fearful]]; [[timid]]; [[timorous]]; [[alarmed]]; [[anxious]].
