--- a/wiki/air.wikitext
+++ b/wiki/air.wikitext
@@ -27,6 +27,7 @@
 *[[Breton]]: [[aer]]
 *Bulgarian: [[въздух]] ''m''
 *[[Catalan]]: [[aire]] ''m''
+*[[Chemehuevi]]: [[nɨ'gar]](ɨ)
 *Chinese: [[空氣]], [[空气]] (kōngqì)
 *Dutch: [[lucht]] ''f''
 *[[Esperanto]]: [[aero]]
