--- a/wiki/escape.wikitext
+++ b/wiki/escape.wikitext
@@ -26,6 +26,7 @@ Managing to leave from an unpleasant or dangerous place or situation, e.g. a pri
 #:''He only got a fine and so escaped going to jail''
 
 ====Translations====
+*[[Chemehuevi]]: [[na-'wi-cipi-nkɨ]]
 *Finnish: [[paeta]] (1), [[välttyä]] (2)
 *French: [[échapper]] (1), [[éviter]] (2)
 *Italian: [[scappare]] (1), [[evitare]] (2)
