--- a/wiki/devil.wikitext
+++ b/wiki/devil.wikitext
@@ -21,6 +21,7 @@ From Latin '''[[diabolus]]''', from Greek '''diabolos'''
 #In [[Christian Science]], an evil or erroneous entity.
 
 ====Translations====
+*[[Albanian]]: [[djall]] 
 *[[Catalan]]: [[diable]] ''m''
 *Chinese: [[惡魔]], [[恶魔]]
 *Czech: [[ďábel]]
