--- a/wiki/scarecrow.wikitext
+++ b/wiki/scarecrow.wikitext
@@ -7,4 +7,6 @@
 *[[French]]: [[épouvantail]] ''m''
 *[[German]]: [[Vogelscheuche]] ''f''
 *[[Italian]]: [[spaventapasseri]] ''m sing''
+*[[Maricopa]]: [[chiyer thʼer]]
+*[[O'odham]]: [[vaṣai gakidagĭ odham]]
 *[[Spanish]]: [[espantapájaros]] ''m sing''
