--- a/wiki/ghost.wikitext
+++ b/wiki/ghost.wikitext
@@ -20,7 +20,10 @@
 *[[Holy Ghost]]
 
 ====Translations====
+*[[Chemehuevi]]: [[ɨ'nɨp]](i)
 *German: [[Geist]] ''m'' (1, 2)
 *Italian: [[fantasma]] ''m'' (2)
+*[[Maricopa]]: [[ʼish nyoym]]
+*[[O'odham]]: [[cukut]]
 *Slovene: [[duh]] ''m'' (1, 2), [[senca]] ''f'' (3, means 'shadow')
 *Spanish: [[fantasma]] ''m''
