--- a/wiki/ghost.wikitext
+++ b/wiki/ghost.wikitext
@@ -19,11 +19,11 @@
 *[[ghostly]]
 *[[Holy Ghost]]
 
-====Translations====
-*[[Chemehuevi]]: [[ɨ'nɨp]](i)
+====Translations==== 
+*[[Chemehuevi]]: [[ɨ'nɨp]](i) (2)
 *German: [[Geist]] ''m'' (1, 2)
 *Italian: [[fantasma]] ''m'' (2)
-*[[Maricopa]]: [[ʼish nyoym]]
-*[[O'odham]]: [[cukut]]
+*[[Maricopa]]: [[ʼish nyoym]] (2)
+*[[O'odham]]: [[cukut]] (2)
 *Slovene: [[duh]] ''m'' (1, 2), [[senca]] ''f'' (3, means 'shadow')
 *Spanish: [[fantasma]] ''m''
