--- a/wiki/candy.wikitext
+++ b/wiki/candy.wikitext
@@ -34,6 +34,8 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*[[Maricopa]]: [[ʼayuu mnyee]]
+*[[O'odham]]: [[lulsi]]
 |}
 |}
 
