--- a/wiki/owl.wikitext
+++ b/wiki/owl.wikitext
@@ -70,7 +70,9 @@
 {|
 *Macedonian: [[був]] ([[buv]])
 *Maltese: [[kokka]]
+*[[Maricopa]]: [[mmdii]]
 *Norwegian: [[ugle]]
+*[[O'odham]]: [[cukut]]
 *[[Occitan]]: [[chòta]]
 *Pangasinan: [[kolayot]]
 *Polish: [[sowa]]
