--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -51,12 +51,16 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*[[Bavarian]]: [[Katz]] ''f'' (1), [[Koda]] ''m'' (1)
 *[[Cockney rhyming slang]]: [[ball of fat]]
 *Estonian: [[kass]]
 *French: (''general, male'') [[chat]] ''m'', (''female'') [[chatte]] ''f''
+*German: [[Katze]] ''f'' (1, 2), [[Kater]] ''m'' (1), [[Neunschwänzige]] [[Katze]] ''f'' (3)
 *Italian: (''general, male'') [[gatto]] ''m'', (''female'') [[gatta]] ''f''
-*[[Bavarian]]: [[Katz]] ''f'' (1), [[Koda]] ''m'' (1)
+*[[Maricopa]]: [[posh]]
+*[[Navajo]]: [[gídí]]
 *Norwegian: [[huskatt]] ''m'', [[katt]] ''m''
+*[[O'odham]]: [[<nowiki>mi:tol</nowiki>]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -65,7 +69,6 @@
 *[[Romanica]]: (''general, male'') [[catto]] ''m'', (''female'') [[catta]] ''f''
 *Spanish: (''general, male'') [[gato]] ''m'', (''female'') [[gata]] ''f''
 *Swedish: [[katt]] ''c''
-*German: [[Katze]] ''f'' (1, 2), [[Kater]] ''m'' (1), [[Neunschwänzige]] [[Katze]] ''f'' (3)
 |}
 |}
 
