--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -58,7 +58,7 @@
 *German: [[Katze]] ''f'' (1, 2), [[Kater]] ''m'' (1), [[Neunschwänzige]] [[Katze]] ''f'' (3)
 *Italian: (''general, male'') [[gatto]] ''m'', (''female'') [[gatta]] ''f''
 *[[Maricopa]]: [[posh]]
-*[[Navajo]]: [[gídí]]
+*[[Navajo]]: [[gídí]], [[mósí]]
 *Norwegian: [[huskatt]] ''m'', [[katt]] ''m''
 *[[O'odham]]: [[<nowiki>mi:tol</nowiki>]]
 |}
