--- a/wiki/moon.wikitext
+++ b/wiki/moon.wikitext
@@ -18,6 +18,8 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*[[Apache]] (Western): [[tłʼéʼgonaʼáí]]
+*[[Chemehuevi]]: [[mi'jarogopic]](i)
 *Finnish: [[kuu#Finnish|kuu]], [[Kuu#Finnish|Kuu]] (''astronomy'')
 *French: [[lune]] ''f''
 *Italian: [[luna]] ''f''
@@ -28,6 +30,8 @@
 <!--Put translations for languages from J to Z here-->
 *Japanese: [[月]] ([[つき]], tsuki)
 *Latin: [[luna]] ''f''
+*[[Maricopa]]: [[xlyʼa]]
+*[[O'odham]]: [[maṣad]]
 |}
 |}
 
@@ -59,6 +63,8 @@
 {|
 <!--Put translations for languages from J to Z here-->
 *Japanese: [[月]] ([[つき]], tsuki) ''not literary''
+*[[Maricopa]]: [[xlyʼa]]
+*[[O'odham]]: [[maṣad]]
 |}
 |}
 
