/* Proper Noun */ <Apache#41821>

--- a/wiki/Apache.wikitext
+++ b/wiki/Apache.wikitext
@@ -6,13 +6,14 @@
 ===Proper Noun===
 '''Apache''
 
-# Any member of Athapaskan tribes that migrated to the  southwestern desert (from Arizona to Texas and south  into Mexico); fought a losing battle from 1861 to 1886 with the United States and were resettled in Oklahoma.
+# An Apache person
 # A Parisian gangster.
 # The language of the Apache people.
 # An [[open source]] HTTP server.
 # The town of Apache Oklahoma (zipcode 73006)
 
 ====Translations====
+*[[Apache]] (Western): [[ndee]]
 *{{sk}}: [[Apač#Slovak|Apač]] ''m'' (1), [[Apačka]] ''f'' (1), [[apač]] (2), [[apačtina]] (3)
 
 ====References====
