--- a/wiki/Apache.wikitext
+++ b/wiki/Apache.wikitext
@@ -8,7 +8,7 @@
 
 # An Apache person
 # A Parisian gangster.
-# The language of the Apache people.
+# The languages of the Apache peoples.
 # An [[open source]] HTTP server.
 # The town of Apache Oklahoma (zipcode 73006)
 
