--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -44,7 +44,7 @@
 ===Verb===
 '''to sex'''
 #to determine the sex of
-#to have sex with someone
+#to have sex with someone (coll.)
 
 ====Translations====
 *Spanish: [[sexar]]
