--- a/wiki/clinozoisite.wikitext
+++ b/wiki/clinozoisite.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''Clinozoisite''' (''[[countable]]''), ''Mineralogy''
+'''Clinozoisite''' (''[[uncountable]]''), ''Mineralogy''
 
 # A [[mineral]] found in [[crystal]]line [[schist]]s, a [[metamorphic]] product of [[calcium]] [[feldspar]].
 
