--- a/wiki/vote-by-mail.wikitext
+++ b/wiki/vote-by-mail.wikitext
@@ -4,7 +4,7 @@
 #: ''You send your vote-by-mail ballot by Friday for it to arrive in the election office in time to be counted.''
 
 ===Noun===
-# A system for conducting elections in which voters recieve and return ballots via the mail
+# A system for conducting [[elections]] in which [[voters]] recieve and return ballots via the [[mail]]
 #: ''In Oregon, elections are conducted using vote-by-mail.''
 
 ===External link===
