/* Adjective */  typo <vote-by-mail#63814>

--- a/wiki/vote-by-mail.wikitext
+++ b/wiki/vote-by-mail.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Adjective===
 # Using, or relating to vote-by-mail
-#: ''You send your vote-by-mail ballot by Friday for it to arrive in the election office in time to be counted.''
+#: ''You must send your vote-by-mail ballot by Friday for it to arrive in the election office in time to be counted.''
 
 ===Noun===
 # A system for conducting [[elections]] in which [[voters]] recieve and return ballots via the [[mail]]
