--- a/wiki/homosexual.wikitext
+++ b/wiki/homosexual.wikitext
@@ -20,7 +20,7 @@ Turd Burglar,
 ====Translations====
 *Bulgarian: [[хомосексуалист]] ''m'', [[гей]] ''m'' <!--, [[педал]] ''m'' (highly offensive) this is not an idiomatic translation - belongs under "queer" and the like -->
 *[[Chinese]]: [[同性恋]]
-*Dutch: [[homoseksueel]] ''m'', [[homo]] ''m'', [[mietje]] ''n''
+*Dutch: [[homoseksueel]] ''m'', [[homo]] ''m''
 *Esperanto: [[samseksemo]]
 *Finnish: [[homoseksuaali]], [[homoseksualisti]]
 *French: [[homosexuel]] ''m'', [[homosexuelle]] ''f''
