--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -27,6 +27,7 @@
 *Finnish: [[rakastaa]]
 *French: [[aimer]]
 *German: [[lieben]]
+*Hebrew: [[:he:לאהוב|לאהוב]]
 *Italian: [[amare]]
 |}
 | width=1% |
@@ -35,7 +36,7 @@
 *Japanese: [[恋する]] (こいする, koisuru), [[愛する]] (あいする, aisuru)
 *Latvian: [[mīlēt]]
 *Portuguese: [[amar]]
-*Russian: [[любить]]
+*Russian: [[:ru:любить|любить]]
 *Spanish: [[amar]], [[querer]]
 *{{sk}}: [[milovať]], [[ľúbiť]]
 *Swedish: [[älska]], [[vara kär i]]
@@ -62,7 +63,7 @@
 *Japanese: [[気に入っている]]
 *Latvian: [[patikt]], [[mīlēt]]
 *Portuguese: [[adorar]], [[amar]]
-*Russian: [[любить]]
+*Russian: [[:ru:любить|любить]]
 |}
 |}
 
@@ -115,13 +116,13 @@ The translations below need to be checked by native speakers and then inserted i
 *Esperanto: [[ami]]
 *Frisian: [[hâlde fan]]
 *Guarani: [[ayhu]] (ah-)
-*Hebrew: [[אהבה]] (A'ha'va)
+*Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
 *Indonesian: [[cinta]], [[kasih]], [[sayang]]
 *Interlingua: [[amar]]
 *Korean: [[사랑하다]] (saranghada)
 *Latin: [[amare]]
 *Polish: [[kochać]]
-*[[Romanica]]: [[amar]]
+*[[Romanica]]: [[amar]] 
 *Slovene: [[ljubiti]]
 *Thai: [[รัก]]
 *Tupinambá: [[aûsub]] (s-)
@@ -160,6 +161,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Finnish: [[rakkaus]]
 *French: [[amour]] [[:fr:amour| (fr)]] ''m''
 *German: [[Liebe]] [[:de:Liebe| (de)]] ''f''
+*Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
 *Irish Gaelic: [[Grá]]
 *Italian: [[amore]] ''m''
 |}
@@ -170,7 +172,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Latvian: [[mīlestība]] ''f'', [[mīla]] ''f''
 *Portuguese: [[amor#Portuguese|amor]]
 *{{sk}}: [[láska]] ''f''
-*Russian: [[любовь]] ''f''
+*Russian: [[:ru:любовь|любовь]] /l'ubov'/ ''f''
 *Spanish: [[amor#Spanish|amor]] ''m''
 *Swedish: [[kärlek]] ''c''
 *Ukrainian: [[кохання]], [[любов]]
@@ -184,17 +186,19 @@ The translations below need to be checked by native speakers and then inserted i
 {|
 *Estonian: [[armastus]]
 *Finnish: [[romantiikka]], [[lempi]] (''physical or poetic''), [[rakkaus]]
-*French: [[amour]] ''m''
-*German: [[Liebe]] ''f''
+*French: [[:fr:amour|amour]] ''m''
+*German: [[:de:Liebe|Liebe]] ''f''
+*Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
+
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: [[amore]] ''m''
+*Italian: [[:it:amore|amore]] ''m''
 *Japanese: [[恋]] (こい, koi), [[恋愛]] (れんあい, ren-ai)
 *Latvian: [[mīlestība]] ''f'', [[mīla]] ''f''
 *Portuguese: [[amor#Portuguese|amor]]
-*Russian: [[любовь]] ''f''
+*Russian: [[:ru:любовь|любовь]] ''f''
 *{{sk}}: [[láska]] ''f''
 *Swedish: [[kärlek]] ''c''
 |}
@@ -206,17 +210,17 @@ The translations below need to be checked by native speakers and then inserted i
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Finnish: [[rakas]], [[kulta]]
-*French: [[amour]] ''m''
-*German: [[Liebe]] ''f'', [[Liebling]] ''m''
+*French: [[:fr:amour|amour]] ''m''
+*German: [[:de:Liebe|Liebe]] ''f'', [[Liebling]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: [[amore]] ''m''
+*Italian: [[:it:amore|amore]] ''m''
 *Japanese: [[恋人]] (こいびと, koibito)
 *Latvian: [[mīļais]] ''m'', [[mīļā]] ''f'', [[mīļums]] ''f'', [[mīla]] ''m'' or ''f''
 *Portuguese: [[amor#Portuguese|amor]]
-*Russian: [[любымий]] ''m'', [[любымая]] ''f''
+*Russian: [[:ru:любимый|любимый]] /l'ubimi'y/ ''m'', [[:ru:любимая|любимая]] /l'ubimaya/ ''f''
 *{{sk}}: [[láska]] ''f''
 *Swedish: [[älskling]] ''c'' 
 |}
@@ -310,4 +314,8 @@ The translations below need to be checked by native speakers and then inserted i
 
 [[pl:love]]
 [[sv:love]]
+
+==[[Multilingual associations]]==
+*[[Hebrew]]: '''love''' ב[[:he:לב|לב]] /ba lev/ (in [[heart]]), '''love''' ו[[:he:ללבלב|ללבלב]] /ve lelavlev/ (and [[blossom]]) 
+
 [[Category:Nouns]][[Category:Transitive Verbs]][[Category:Intransitive Verbs]]
