--- a/wiki/Venus.wikitext
+++ b/wiki/Venus.wikitext
@@ -9,6 +9,7 @@
 *Estonian: [[Veenus]]
 *Finnish: [[Venus]] (2)
 *German: [[Venus]] ''f''
+*Lithuanian: [[Venera]] ''f''
 *{{ms}}: [[Zuhrah]] (2)
 *{{pl}}: [[Wenus]] ''f'' (1,2)
 *[[Romanica]]: [[Venus]] ''f''
