--- a/wiki/Uranus.wikitext
+++ b/wiki/Uranus.wikitext
@@ -20,6 +20,7 @@ Second declension
 *German: [[Uranus]] ''m''
 *Greek: [[Uranos]] ''m''
 *Latin: [[Uranus]] ''m''
+*Lithuanian: [[Uranas]] ''m''
 *{{ms}}: [[Uranus]] (3)
 *{{pl}}: [[Uranos]] ''m'' (1, 2), [[Uran]] ''m'' (3)
 *Slovak: [[Urán]] ''m''
