--- a/wiki/Saturn.wikitext
+++ b/wiki/Saturn.wikitext
@@ -11,6 +11,7 @@
 *French: [[saturne]] ''m''
 *German: Saturn ''m''
 *Italian: [[Saturno]] ''m''
+*Lithuanian: [[Saturnas]] ''m''
 *{{ms}}: [[Zuhal]] (2)
 *{{pl}}: Saturn ''m''
 *Slovak: Saturn ''m''
