--- a/wiki/Neptune.wikitext
+++ b/wiki/Neptune.wikitext
@@ -9,6 +9,7 @@
 *Finnish: [[Neptunus]] (2)
 *French: [[neptune]] ''m''
 *German: [[Neptun]] ''m''
+*Lithuanian: [[Neptūnas]] ''m''
 *{{ms}}: [[Neptun]] (2)
 *{{pl}}: [[Neptun]] ''m'' (1, 2)
 *Slovak: [[Neptún]] ''m''
