--- a/wiki/sky.wikitext
+++ b/wiki/sky.wikitext
@@ -30,6 +30,7 @@
 *Indonesian: [[langit]]
 *Japanese: [[空]] ([[そら]], sora), [[天]] ([[てん]], ten)
 *Korean: [[하늘]] (haneul)
+*Lithuanian: [[dangus]] ''m'' (1, 2, 4); [[oras]] ''m'' (3)
 *[[Manchu]]: [[abka]]
 *Polish: [[niebo]] ''m'', [[niebiosa]] ''pl'' (4), [[firmament]] ''m'' (2)
 *Romanian: [[cer]] ''n''
@@ -39,6 +40,7 @@
 *{{bo}}: [[གནམ་]] (gnam)
 
 ----
+
 ==Swedish==
 ===Noun===
 '''sky''' (''c'') (''pl'' [[skyar]], ''def sing'' [[skyn]], ''def pl'' [[skyarna]])
