--- a/wiki/mercury.wikitext
+++ b/wiki/mercury.wikitext
@@ -69,7 +69,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 *Kazakh: [[Сынап]]
 *Latin: [[hydrargyrum]]
 *Latvian: [[dzīvsudrabs]]
-*Lithuanian: [[gyvsidabris]]
+*Lithuanian: [[gyvsidabris]] ''m''
 *Luxembourgish: [[quecksëlwer]]
 *Macedonian: [[Жива]]
 *Malay: [[merkuri]]
