--- a/wiki/earth.wikitext
+++ b/wiki/earth.wikitext
@@ -53,6 +53,7 @@
 *[[Klingon]]: [[tera']] (1), [[yav]] (2)
 *Korean: [[지면]] (jimeon) (1), [[토지]] (toji) (1), [[훍]] (hulg /huk/) (2), [[토양]] (toyang) (2)
 *Latin: [[terra]] ''f'' (1,2,3)
+*Lithuanian: [[žemė]] ''f''
 *[[Luxembourgish]]: [[Äerd]] ''f'' (1,2,3)
 *Maltese: [[dinja]]
 *[[Maori]]: [[papa]]
