--- a/wiki/mercury.wikitext
+++ b/wiki/mercury.wikitext
@@ -117,6 +117,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[Merkurijus]] ''m''
 *Portuguese: [[Mercúrio]] ''m''
 *Spanish: [[Mercurio]] ''m''
 |}
@@ -135,6 +136,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Japanese: [[水星]] ([[すいせい]], suisei)
+*Lithuanian: [[Merkurijus]] ''m''
 *Portuguese: (o [[planeta]]) [[Mercúrio]] ''m''
 *Spanish: (el [[planeta]]) [[Mercurio]] ''m''
 |}
