--- a/wiki/weather.wikitext
+++ b/wiki/weather.wikitext
@@ -19,6 +19,7 @@
 *[[Interlingua]]: [[tempore]], [[climate]]
 *Italian: [[tempo]] ''m'', [[clima]] ''m''
 *Japanese: [[天気]] ([[てんき]], tenki)
+*Lithuanian: [[oras]] ''m''
 *Polish: [[pogoda]] ''f''
 *Portuguese: [[tempo]] ''m'', [[clima]] ''m''
 *Russian: [[погода]]
