--- a/wiki/sky.wikitext
+++ b/wiki/sky.wikitext
@@ -30,7 +30,7 @@
 *Indonesian: [[langit]]
 *Japanese: [[空]] ([[そら]], sora), [[天]] ([[てん]], ten)
 *Korean: [[하늘]] (haneul)
-*Lithuanian: [[dangus]] ''m'' (1, 2, 4); [[oras]] ''m'' (3)
+*Lithuanian: [[dangus]] ''m'' (1-4)
 *[[Manchu]]: [[abka]]
 *Polish: [[niebo]] ''m'', [[niebiosa]] ''pl'' (4), [[firmament]] ''m'' (2)
 *Romanian: [[cer]] ''n''
