--- a/wiki/august.wikitext
+++ b/wiki/august.wikitext
@@ -43,6 +43,7 @@ Named after '''[[Augustus Caesar]]''', from Latin adjective '''[[augustus]]'''
 *{{ga}}: [[Lúnasa]]
 *Italian: [[agosto#Italian|agosto]] ''m''
 *Japanese: [[八月]] (はちがつ, hachigatsu)
+*Lithuanian: [[rugpjūtis]] ''m''
 *[[Manchu]]: ([[jakūn biya]])
 *[[Maori]]: [[äkuhata]]
 *Norwegian: august
