/* Proper Noun */ <Apache#41821>

--- a/wiki/Apache.wikitext
+++ b/wiki/Apache.wikitext
@@ -4,7 +4,7 @@
 *:[[Rhymes:English:-ætʃi|Rhymes: -ætʃi]]
 
 ===Proper Noun===
-'''Apache''
+'''Apache'''
 
 # An Apache person
 # A Parisian gangster.
