--- a/wiki/hour.wikitext
+++ b/wiki/hour.wikitext
@@ -30,6 +30,7 @@
 *Italian: [[ora]] ''f''
 *Japanese: [[時]] ([[じ]], ji), [[時間]] ([[じかん]], jikan)
 *Korean: [[시]] [時] (si)
+*Lithuanian: [[valanda]] ''f''
 *{{ms}}: [[jam]]
 *Norwegian: [[time]]
 *Polish: [[godzina]] ''f''
