/* Translations */ fi <cat#36>

--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -35,6 +35,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Estonian: [[kaslane]]
+*Finnish: [[kissaeläin]]
 *French: [[félin]] ''m''
 *Norwegian: [[kattedyr]] ''n''
 *Portuguese: [[felino]] ''m'', [[felina]] ''f''
@@ -54,6 +55,7 @@
 *[[Bavarian]]: [[Katz]] ''f'' (1), [[Koda]] ''m'' (1)
 *[[Cockney rhyming slang]]: [[ball of fat]]
 *Estonian: [[kass]]
+*Finnish: [[kissa]]
 *French: (''general, male'') [[chat]] ''m'', (''female'') [[chatte]] ''f''
 *German: [[Katze]] ''f'' (1, 2), [[Kater]] ''m'' (1), [[Neunschwänzige]] [[Katze]] ''f'' (3)
 *Italian: (''general, male'') [[gatto]] ''m'', (''female'') [[gatta]] ''f''
@@ -165,7 +167,6 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Esperanto]]: [[kato]]
 *Estonian: [[kass]]
 *[[Faroese]]: [[ketta]]
-*Finnish: [[kissa]]
 *[[Frisian]]: [[kat]]
 *[[Friulian]]: [[gjat]]
 *[[Galician]]: [[gato]]
