--- a/wiki/candy.wikitext
+++ b/wiki/candy.wikitext
@@ -27,6 +27,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[karkki]]
 *French: [[bonbon]] ''m''
 *Italian: [[caramella]] ''f''
 |}
