--- a/wiki/July.wikitext
+++ b/wiki/July.wikitext
@@ -35,6 +35,7 @@ Named after Julius Caesar.
 *{{ga}}: [[Iúil]]
 *Italian: [[giulio]] ''m''
 *Japanese: [[七月]] (しちがつ, shichigatsu)
+*Lithuanian: [[liepa]] ''f'' (1)
 *[[Manchu]]: ([[nadan biya]])
 *[[Maori]]: [[hürae]]
 *Norwegian: [[juli]]
