--- a/wiki/microsecond.wikitext
+++ b/wiki/microsecond.wikitext
@@ -9,4 +9,5 @@
 #A unit of [[time]] equal to 0.000&nbsp;001 [[second]]s and with symbol &mu;s.
 
 ==== Translations ====
+*Lithuanian: [[mikrosekundė]] ''f''
 *Slovak: [[mikrosekunda]] ''f''
