--- a/wiki/millennium.wikitext
+++ b/wiki/millennium.wikitext
@@ -8,6 +8,7 @@
 #:*[[Finnish]]: [[vuosituhat]]
 #:*[[French]]: [[millénaire]]
 #:*[[German]]: [[Jahrtausend]] ''n''
+#:*[[Lithuanian]]: [[tūkstantmetis]] ''m''
 #:*[[Romanian]]: [[mileniu]] ''n''
 #:*[[Russian]]: [[тысячелетие]]
 #:*[[Swedish]]: [[årtusende]], millennium
