--- a/wiki/millisecond.wikitext
+++ b/wiki/millisecond.wikitext
@@ -7,3 +7,4 @@ symbol: ms
 ===translations===
 *[[Dutch]]: [[milliseconde]] ''m''
 *[[German]]: [[Millisekunde]] ''f''
+*[[Lithuanian]]: [[milisekundė]] ''f''
