--- a/wiki/minute.wikitext
+++ b/wiki/minute.wikitext
@@ -29,6 +29,7 @@
 *[[Interlingua]]: [[minuta]] (1, 4)
 *Italian: [[minuto#Italian|minuto]] ''m'' (1), [[attimo]] ''m'' (2), [[momento]] ''m'' (2)
 *Japanese: [[分]] ([[ふん]], fun) (1)
+*Lithuanian: [[minutė]] ''f'' (1-3)
 *{{ms}}: [[minit]] (1)
 *Norwegian: [[minutt]] (1)
 *Polish: [[minuta#Polish|minuta]] (1)
