--- a/wiki/November.wikitext
+++ b/wiki/November.wikitext
@@ -36,6 +36,7 @@
 *{{ga}}: [[Samhain]]
 *Italian: [[novembre]] ''m''
 *Japanese: [[十一月]] (じゅういちがつ, jūichigatsu)
+*Lithuanian: [[lapkritis]] ''m''
 *[[Manchu]]: ([[omšon biya]])
 *[[Maori]]: [[nöema]]
 *Norwegian: november
