--- a/wiki/October.wikitext
+++ b/wiki/October.wikitext
@@ -36,6 +36,7 @@
 *{{ga}}: [[Deireach Fómhair]]
 *Italian: [[ottobre]] ''m''
 *Japanese: [[十月]] (じゅうがつ, jūgatsu)
+*Lithuanian: [[spalis]] ''m''
 *[[Manchu]]: ([[juwan biya]])
 *[[Maori]]: [[oketopa]]
 *Norwegian: [[oktober]]
