--- a/wiki/eukaryote.wikitext
+++ b/wiki/eukaryote.wikitext
@@ -3,3 +3,6 @@
 eu– (good-, well-, true) + Greek karuotos, having nuts (from karuon, nut)
 ====Meanings====
 #Single-celled or muliticellular organism whose cells contain at least one distinct nucleus.
+
+====Translations====
+*Lithuanian: [[eukariotas]] ''m''
