/* Translations */ <stem cell#7399>

--- a/wiki/stem_cell.wikitext
+++ b/wiki/stem_cell.wikitext
@@ -10,6 +10,7 @@
 *French: [[cellule souche]] ''f''
 *Indonesian: [[sel induk]]
 *Japanese: [[幹細胞]] ([[かんさいぼう]], kansaibō)
+*Lithuanian: [[kamieninė ląstelė]] ''f''
 *Polish: [[komórka pnia]] ''f'', [[komórka macierzysta]] ''f''
 *Portuguese: [[célula-tronco]] ''f''
 *Swedish: [[stamcell]] ''c''
