--- a/wiki/cell.wikitext
+++ b/wiki/cell.wikitext
@@ -18,6 +18,7 @@
 *Interlingua: [[cellula]]
 *Japanese: [[細胞]] ([[さいぼう]], saibō)
 *Latin: [[cellula]] ''f''
+*Lithuanian: [[ląstelė]] ''f'' (1, 2); [[celė]] ''f'' (3-5)
 *Persian: [[یاخته]] (yakhteh)
 *Polish: [[komórka]] ''f''
 *Portuguese: [[célula]] ''f''
