--- a/wiki/sunrise.wikitext
+++ b/wiki/sunrise.wikitext
@@ -24,7 +24,9 @@ SUHN-seht
 *Greek: ([[anatole]])
 *[[Hebrew]]: [[זריחה]] (Zri'ha)
 *Latin: [[aurora]] ''f'' (1,2), [[ortus]] ''m'' (1)
+*Lithuanian: [[saulėtekis]] ''m'' (1), [[aušra]] ''f'' (1); [[žara]] ''f'' (2)
 *Romanian: [[răsărit de soare]] (1)
+
 ===Adjective===
 
 ===See also===
