--- a/wiki/sunset.wikitext
+++ b/wiki/sunset.wikitext
@@ -16,6 +16,7 @@
 *[[Finnish]]: [[auringonlasku]] (1, 2, 3)
 *[[French]]: [[coucher du soleil]] ''m''
 *[[Greek]]: ([[dyse]])
+*[[Lithuanian]]: [[saulėlydis]] ''m'' (1, 2, 4); [[žara]] ''f'' (3)
 *[[Old English]]: [[sunnansetlgang]] ''m''
 *[[Polish]]: [[zachód słońca]] ''m'' (1), [[zmierzch]] ''m'' (2,3) 
 *[[Portuguese]]: [[pôr do sol]]
