--- a/wiki/September.wikitext
+++ b/wiki/September.wikitext
@@ -35,6 +35,7 @@
 *{{ga}}: [[Méan Fómhair]]
 *Italian: [[settembre]] ''m''
 *Japanese: [[九月]] (くがつ, kugatsu)
+*Lithuanian: [[rugsėjis]] ''m''
 *[[Manchu]]: ([[uyun biya]])
 *[[Maori]]: [[hepetemamahuru]]
 *Norwegian: september
