--- a/wiki/today.wikitext
+++ b/wiki/today.wikitext
@@ -39,6 +39,7 @@
 *Japanese: [[今日]] (きょう, kyō)
 *Korean: [[오늘]] (o-neul)
 *Latin: [[hodie]]
+*Lithuanian: [[šiandiena]] ''f''
 *[[Macedonian]]: [[денеска]]
 *Norwegian: [[I dag]]
 *Occitan: [[ancuei]]
