--- a/wiki/today.wikitext
+++ b/wiki/today.wikitext
@@ -83,6 +83,7 @@
 #:*[[Interlingua]]: [[hodie]]
 #:*Italian: [[oggi]]
 #:*Latin: [[hodie]]
+#:*Lithuanian: [[šiandien]]
 #:*[[Macedonian]]: [[денеска]]
 #:*Japanese: [[今日]] (きょう, kyō)
 #:*Korean: [[오늘]] (o-neul)
