--- a/wiki/week.wikitext
+++ b/wiki/week.wikitext
@@ -46,6 +46,7 @@ Related words are Old German '''[[wohha]]''' (modern German '''[[Woche]]'''), ol
 *Italian: [[settimana]] ''f''
 *Japanese: [[週]] ([[しゅう]], shū), [[週間]] ([[しゅうかん]], shūkan)
 *Latin: [[SEPTIMANA]]
+*Lithuanian: [[savaitė]] ''f''
 *Norwegian ([[bokmål]]): [[uke]] ''m''/''f''
 *Norwegian ([[nynorsk]]): [[veke]] ''f''
 *Polish: [[tydzień]]
