--- a/wiki/winter.wikitext
+++ b/wiki/winter.wikitext
@@ -41,6 +41,7 @@
 *Japanese: [[冬]] ([[ふゆ]], fuyu)
 *Korean: [[겨울]] (gyeo-ul)
 *Latin: [[hiems]] ''f''
+*Lithuanian: [[žiema]] ''f''
 *[[Manchu]]: [[tuweri]]
 *[[Māori]]: [[takurua]]
 *Norwegian: [[vinter]]
