--- a/wiki/tree.wikitext
+++ b/wiki/tree.wikitext
@@ -46,6 +46,7 @@
 *[[Javanese]]: [[wit]]
 *Korean: [[나무]] (namu)
 *Latin: [[arbor]] ''f''
+*Lithuanian: [[medis]] ''m'' (1, 4, 5, 6)
 *[[Luxembourgish]]: [[Baam]]
 *[[Manchu]]: ([[moo]])
 *[[Nahuatl]]: [[cuahuitl]]
