--- a/wiki/grass.wikitext
+++ b/wiki/grass.wikitext
@@ -36,6 +36,7 @@ Old English ''græs'', from Germanic, from the same Proto-Indo-European root as 
 *Italian: [[erba]] ''f'' (1)
 *Japanese: [[草]] ([[くさ]], kusa) (1)
 *Korean: [[풀]] (pul) (1)
+*Lithuanian: [[žolė]] ''f'' (1-3)
 *Norwegian: [[gress]] (1)
 *Polish: [[trawa]] ''f'' (1), [[trawnik]] ''m'' (2), [[trawka]] ''f'' (3), [[kapuś]] ''m'' (4) 
 *Portuguese: [[erva]] ''f'' (1,2,3); [[relva]] ''f'' (2) (PT), [[grama]] ''f'' (2) (BR); [[mato]] ''m'' (3); [[dedo-duro]] ''m'', [[alcagüete]] ''m'' (4)
