--- a/wiki/dragon.wikitext
+++ b/wiki/dragon.wikitext
@@ -48,6 +48,7 @@ From Latin [[draco]], ''dragon''.
 *Japanese: [[竜]]/[[龍]] ([[たつ]],tatsu)/([[りゅう]], ryū), [[ドラゴン]] (doragon)
 *Korean: [[용]] (yong)
 *Latin: [[draco]] ''m''
+*Lithuanian: [[drakonas]] ''m'', also [[slibinas]] ''m''
 *Norwegian: [[drage]] ''c''
 *Persian: [[اژدها]] (ezhdeha)
 *Polish: [[drak]]
