--- a/wiki/cloud.wikitext
+++ b/wiki/cloud.wikitext
@@ -25,6 +25,7 @@
 *Italian: [[nubo]]
 *Japanese: [[雲]] ([[くも]], kumo)
 *Latin: [[nubis]] (1, 2, 3)
+*Lithuanian: [[debesis]] ''m''
 *Polish: [[chmura]] ''f'' (1,2,3)
 *Portuguese: [[nuvem]] ''f'' (1,2,3)
 *[[Romanian]]: [[nor]] ''m''
