--- a/wiki/earthquake.wikitext
+++ b/wiki/earthquake.wikitext
@@ -22,6 +22,7 @@ UHRTH-kwe&iuml;k
 *Greek: [[σεισμός]] (seismos) ''m''
 *Italian: [[terremoto]] ''m''
 *Japanese: [[地震]] (じしん, jishin)
+*Lithuanian: [[žemės drebėjimas]] ''m''
 *Portuguese: [[terremoto]] ''m''
 *Romanian: [[cutremur]] ''n''
 *Spanish: [[terremoto]] ''m'', [[temblor]] ''m''
