--- a/wiki/hail.wikitext
+++ b/wiki/hail.wikitext
@@ -12,6 +12,7 @@
 *German: [[Hagel]] ''m''
 *Italian: [[grandine]] ''f''
 *Japanese: [[雹]] (ひょう)
+*Lithuanian: [[kruša]] ''f''
 *Swedish: [[hagel]]
 
 ===Intransitive verb===
