--- a/wiki/mist.wikitext
+++ b/wiki/mist.wikitext
@@ -11,6 +11,7 @@
 ====Translations====
 *Dutch: mist ''m'', [[nevel]] ''m''
 *French: [[brouillard]] ''m''
+*Lithuanian: [[migla]] ''f'', [[rūkas]] ''m'', [[ūkana]] ''f'', [[ūkas]] ''f''
 
 ===Verb===
 '''to mist'''
