--- a/wiki/ocean.wikitext
+++ b/wiki/ocean.wikitext
@@ -21,6 +21,7 @@ From Latin '''[[Oceanus]]''', from Greek '''[[Okeanos]]'''; originally a proper 
 *Hebrew: [[ים|יָם]] ''m''
 *Italian: [[oceano]] ''m''
 *Latin: [[Oceanus]]
+*Lithuanian: [[okeanas]] ''m'', [[vandenynas]] ''m''
 *Japanese: [[大洋]] ([[たいよう]]), [[海洋]] ([[かいよう]])
 *Portuguese: [[oceano]] ''m''
 *Slovene: ocean ''m''
