--- a/wiki/rain.wikitext
+++ b/wiki/rain.wikitext
@@ -22,6 +22,7 @@
 *Italian: [[pioggia]] ''f''
 *Japanese: [[雨]] ([[あめ]], ame)
 *Korean: [[비]] (bi)
+*Lithuanian: [[lietus]] ''m''
 *[[Mandarin]]: [[雨]] (Pīnyīn: yǔ)
 *[[Persian]]: [[باران]] (bārān)
 *Portuguese: [[chuva]] ''f''
