fmt; cleaned up def <dork#63767>

--- a/wiki/dork.wikitext
+++ b/wiki/dork.wikitext
@@ -1,1 +1,10 @@
-A [[teasing]] or [[juvenile]] term often used in a [[derogatory]] way to describe someone "[[quirky]]", "[[silly]]" and/or "[[stupid]]". [[Slang]] for "[[goofball]]", "[[geek]]", "[[dumbass]]", "[[freak]]", "[[retard]]" or "[[dweeb]]".
+==English==
+===Noun===
+'''dork''' (''plural'' '''dorks''')
+
+#(''US, derogatory slang'') A stupid person, or one who is out of touch with contemporary trends.
+
+====Synonyms====
+<!--
+"[[goofball]]", "[[geek]]", "[[dumbass]]", "[[freak]]", "[[retard]]" or "[[dweeb]]".
+-->
