--- a/wiki/sea.wikitext
+++ b/wiki/sea.wikitext
@@ -41,6 +41,7 @@
 *Japanese: [[海]] ([[うみ]], umi)
 *Korean: [[바다]] (bada), [[해양]] (海洋, haeyang)
 *Latin: [[mare]] ''n''
+*Lithuanian: [[jūra]] ''f'' ([[marios]] ''f'' ''poetic'' or smaller sea water body)
 *Polish: [[morze]] ''n''
 *Portuguese: [[mar]] ''m''
 *Romanian: [[mare]] ''f''
