--- a/wiki/snow.wikitext
+++ b/wiki/snow.wikitext
@@ -29,6 +29,7 @@ From {{enm}}, from {{ang}} [[snaƿ|snāƿ]]. [[Category:Indo-European root *snei
 *Italian: [[neve]] ''f'' (1)
 *Japanese: [[雪]] ([[ゆき]], yuki)
 *Latin: [[nix]] ''f'' (1), [[nivalis]], [[niveus]] (2)
+*Lithuanian: [[sniegas]] ''m''
 *Old English: [[snáw]] ''m'', [[snáwa]] ''m''
 *Polish: [[śnieg]] ''m'' (1, 3) [[śnieżnobiały]] ''m'' (2)
 *Romanian: [[zăpadă]] ''f'', [[nea]] ''f'', [[omăt]] ''n''
