revised text of "notes" section <supercalifragilisticexpialidocious#44034>

--- a/wiki/supercalifragilisticexpialidocious.wikitext
+++ b/wiki/supercalifragilisticexpialidocious.wikitext
@@ -7,6 +7,4 @@ A memorable nonsense word from the movie [http://en.wikipedia.org/wiki/Mary_Popp
 # [[fantastic]], very [[wonderful]]
 
 ===Notes===
-Some claim supercalifragilisticexpialidocious is the longest word in the English language but it isn't [[really]]. In case you are wondering the longest word is: [[pneumonoultramicroscopicsilicovolcanoconiosis]].
-
-However, the longest [[real]] word in the English language is [[antidisestablishmentarianism]].
+*It is popularly believed that '''supercalifragilisticexpialidocious''' is the longest word in the English language, but there are longer words.  The "actual" longest word is disputed.  See [[w:Longest word in English|the Wikipedia article on the longest word in the English language]] for more details.
