--- a/wiki/hurricane.wikitext
+++ b/wiki/hurricane.wikitext
@@ -20,6 +20,7 @@ From Spanish [[huracán]].
 *Esperanto: [[uragano]]
 *Finnish: [[hurrikaani]]
 *Greek: ([[kyklonas]])
+*Lithuanian: [[uraganas]] ''m''
 *Spanish: [[huracán]] ''m''
 
 ====Related words====
