--- a/wiki/cattle.wikitext
+++ b/wiki/cattle.wikitext
@@ -44,7 +44,7 @@
 *[[Ladin]]: [[arment]]
 *Latin: [[Bos taurus primigenius]]
 *Latvian: [[liellopigovs]]
-*Lithuanian: [[tauras]]
+*Lithuanian: [[galvijas]] ''m'', [[pekus]] ''m'' (archaic, means heard of cattle)
 *[[Lower Sorbian]]: [[gowjedo]]
 *Macedonian: [[говедо]] ([[govedo]])
 *Maltese: [[bhejjem]]
