--- a/wiki/breeze.wikitext
+++ b/wiki/breeze.wikitext
@@ -8,7 +8,7 @@
 ====Translations====
 *Finnish: [[tuulenviri]], [[tuulonen]] (1)
 *German: [[Briese]] (1)
-
+*Lithuanian: [[vėjelis]] ''m'' (gentle wind)
 
 ====See also====
 [[w:Beaufort_scale|Wikipedia article on the Beaufort scale]]
