--- a/wiki/boar.wikitext
+++ b/wiki/boar.wikitext
@@ -22,6 +22,7 @@
 *Italian: [[verro]] ''m''
 *Japanese: [[雄豚]]
 *Korean: [[멧돼지]]
+*Lithuanian: [[kuilys]] ''m''
 *Persian: [[گراز]]  (goraz)
 *Portuguese: [[varrão]] ''m''
 *Russian: [[хряк]] ''m'' (khryak)
