--- a/wiki/supercalifragilisticexpialidocious.wikitext
+++ b/wiki/supercalifragilisticexpialidocious.wikitext
@@ -1,6 +1,6 @@
 =={{en}}==
 ===Etymology===
-A memorable nonsense word from the movie [http://en.wikipedia.org/wiki/Mary_Poppins ''Mary Poppins''] (Walt Disney Studios, released 1964), and also the title from a song in the movie.  In 1965 there was a copyright case over the song ("SUPERCALAFAJALISTICKEXPEEALADOJUS" versus "SUPERCALIFRAGILISTICEXPIALIDOCIOUS", more properly Life Music Inc. v. Wonderland Music Co., 241 F. Supp. 653 (S.D.N.Y. 1965)) (see for example [[http://www.law.berkeley.edu/journals/btlj/articles/vol8/Beard/html/note.html]]) in which the court ruled that the word had been in use in the general public for some years before the either song was written.
+A memorable nonsense word from the movie [http://en.wikipedia.org/wiki/Mary_Poppins ''Mary Poppins''] (Walt Disney Studios, released 1964), and also the title from a song in the movie.
 
 ===Adjective===
 '''supercalifragilisticexpialidocious'''
@@ -8,3 +8,4 @@ A memorable nonsense word from the movie [http://en.wikipedia.org/wiki/Mary_Popp
 
 ===Notes===
 *It is popularly believed that '''supercalifragilisticexpialidocious''' is the longest word in the English language, but there are longer words.  The "actual" longest word is disputed.  See [[w:Longest word in English|the Wikipedia article on the longest word in the English language]] for more details.
+*In 1965 there was a copyright case over the song ("SUPERCALAFAJALISTICKEXPEEALADOJUS" versus "SUPERCALIFRAGILISTICEXPIALIDOCIOUS", more properly Life Music Inc. v. Wonderland Music Co., 241 F. Supp. 653 (S.D.N.Y. 1965)) (see for example [[http://www.law.berkeley.edu/journals/btlj/articles/vol8/Beard/html/note.html]]) in which the court ruled that the word had been in use in the general public for some years before the either song was written.
