--- a/wiki/snowstorm.wikitext
+++ b/wiki/snowstorm.wikitext
@@ -25,6 +25,7 @@
 *Italian: [[bufera di neve]] ''f''
 *Japanese: [[吹雪]]
 *Korean: [[눈보라]] (nunbora)
+*Lithuanian: [[pūga]] ''f'' 
 *Romanian: [[furtună de nea]], [[furtună de zăpadă]]
 *Russian: [[пурга]] ''f'' (purga),  [[вьюгa]]  ''f'', [[мeтeль]]  ''f'', [[бурaн]]  ''m''
 *Slovak: [[snehová búrka]]  ''f'', [[fujavica]]  ''f''
