--- a/wiki/sow.wikitext
+++ b/wiki/sow.wikitext
@@ -13,7 +13,7 @@
 #:*'''1957''': In England, it was generally termed a 'sow', if the weight was above 10 cwts., if below, it was termed a 'pig' from which the present term 'pig iron' is derived. &mdash; H.R. Schubert, ''History of the British Iron and Steel Industry'', p. 160.
 ====Translations====
 *[[Finnish]]: [[emakko]]
-*Lithuanian: [[kiaulė]] ''f''
+*Lithuanian: [[kiaulė]] ''f'' (1)
 *[[Persian]]: [[ماده‌خوك]]  (madde-khuk) (1)
 
 ===Etymology 2===
