fmt; is adjective capitalised?  Is ca:ŋgo a pronunciation or a translation? <O'odham#63771>

--- a/wiki/O%27odham.wikitext
+++ b/wiki/O%27odham.wikitext
@@ -1,31 +1,36 @@
 ==English==
+===Proper noun===
+'''O'odham''' (''plural'' '''O'odham''')
 
-===Noun===
-'''O'odham''' (sg. and pl.)
-
-# the [[indigenous]] [[language]] of the O'odham.
-# a person of [[Tohono O'odham]], [[Akimel O'odham]], or otherwise O'odham ancestry
+#A person of [[Tohono O'odham]], [[Akimel O'odham]], or otherwise O'odham ancestry
+#The [[indigenous]] [[language]] of the O'odham.
 
 ====Translations====
 *[[Maricopa]]: Thxpash
 
+----
 ==O'odham==
+===Proper noun===
+'''O'odham'''
+
+#An O'odham person
+
+===Adjective===
+'''O'odham''' <!--capitalised?-->
+
+#of the O'odham people
+#[[Native American]], not [[Milga:n]]
 
 ===Noun===
-'''O'odham''' (caps)
+'''o'odham'''
 
-# an O'odham person
-# of the O'odham people
-# Native American, not [[Milga:n]]
+#[[human being]]
+#[[man]]
 
-'''o'odham''' (lc)
+===Derived terms===
+*[[gogs o'odham]]
 
-# a human being
-# a man
-
-* '''[[gogs]] o'odham'''
-
-# a monkey ([[Tohono O'odham]] [[ca:ŋgo]])
+<!--#monkey ([[Tohono O'odham]] [[ca:ŋgo]]): is this a pronunciation or a translation?-->
 
 ===See also===
 *[[w:O'odham|Wikipedia article on the O'odham]]
