+plural; separated "monkey" and "ape" (slightly different meanings) <scimmia#63710>

--- a/wiki/scimmia.wikitext
+++ b/wiki/scimmia.wikitext
@@ -1,5 +1,6 @@
 ==Italian==
 ===Noun===
-'''scimmia''' ''f''
+'''scimmia''' ''f'' (''plural'' '''scimmie''')
 
-# [[monkey]], [[ape]]
+#[[monkey]]
+#[[ape]]
