--- a/wiki/tornado.wikitext
+++ b/wiki/tornado.wikitext
@@ -27,6 +27,7 @@ From Spanish or Portuguese [[tornar]] to turn, return, Latin [[tornare]] to turn
 *Italian: [[ciclone]] ''m''
 *Japanese: [[竜巻]] (たつまき, tatsumaki), [[トルネード]] (torunedo)
 *Korean: [[토네이도]]
+*Lithuanian: [[viesulas]] ''m'', [[tornadas]] ''m'', [[trombas]] ''m''
 *Portuguese: [[furacão]] ''m''
 *Russian: [[торнадо]] ''m'' (tornado)
 *Spanish: tornado ''m''
