--- a/wiki/typhoon.wikitext
+++ b/wiki/typhoon.wikitext
@@ -17,6 +17,7 @@
 *Japanese: [[台風]] ([[たいふう]], taifū), [[颱風]] ([[たいふう]], taifū)
 *Korean: [[태풍]]
 *Latin: [[typhonas]] 
+*Lithuanian: [[taifūnas]] ''m''
 *Russian: [[таифун]] ''m'' (taifun)
 *Spanish: [[tifón]] ''m''
 
