--- a/wiki/tsunami.wikitext
+++ b/wiki/tsunami.wikitext
@@ -11,6 +11,7 @@ From {{ja}} [[津波]] (つなみ, tsunami).
 
 ====Translations====
 *Japanese: [[津波]] (つなみ, tsunami)
+*Lithuanian: [[cunamis]] ''m''
 
 ===See also===
 *[[earthquake]]
