corrected gender; +plural; +en: entry, with syn <singe#63706>

--- a/wiki/singe.wikitext
+++ b/wiki/singe.wikitext
@@ -1,5 +1,16 @@
+==English==
+===Transitive verb===
+'''to singe''' (''[[present participle]]'' '''singeing'''<!--sic-->, ''[[past tense]] and [[past participle]]'' '''singed''')
+
+#To burn slightly.
+
+====Synonyms====
+*[[scorch]]
+
+----
 ==French==
 ===Noun===
-'''singe''' ''f''
+'''singe''' ''m''
 
-# [[monkey]], [[ape]]
+#[[monkey]]
+#[[ape]]
