--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -19,6 +19,7 @@
 *French: [[veau]] ''m'' (1)
 *[[Frisian]]: [[keal]] ''n'' (1)
 *German: [[Kalb]] ''n'' (1)
+*Lithuanian: [[veršis]] ''m'' (1)
 *Spanish: [[ternera]] ''f'' (1)
 *Swedish: [[kalv]] ''c'' (1,2)
 
