--- a/wiki/boring.wikitext
+++ b/wiki/boring.wikitext
@@ -7,7 +7,10 @@
 ===Adjective===
 '''boring''' (more boring, most boring)
 
-# of something which inflicts [[boredom]] upon somebody
+#That causes [[boredom]] in somebody.
+
+====Synonyms====
+*[[dull]], [[mind-numbing]] (''colloquial''), [[tedious]]
 
 ====Translations====
 *Chinese: [[乏味]]
