--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -19,7 +19,7 @@
 *French: [[veau]] ''m'' (1)
 *[[Frisian]]: [[keal]] ''n'' (1)
 *German: [[Kalb]] ''n'' (1)
-*Lithuanian: [[veršis]] ''m'' (1)
+*Lithuanian: [[veršiukas]] ''m'' (1)
 *Spanish: [[ternera]] ''f'' (1)
 *Swedish: [[kalv]] ''c'' (1,2)
 
@@ -37,4 +37,5 @@
 *French: [[mollet]] ''m''
 *[[German]]: [[Waden]] ''m''
 *[[Italian]]: [[polpaccio]] ''m''
+*Lithuanian: [[blauzda]] ''f''
 *[[Spanish]]: [[pantorrilla]] ''f''
