--- a/wiki/beef.wikitext
+++ b/wiki/beef.wikitext
@@ -30,6 +30,7 @@ From French '''[[bœuf]]''', ''ox''; presumably from Latin '''[[bos]]''', ''ox''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Italian: [[manzo]] ''m''
+*Lithuanian: [[jautiena]] ''f''
 |}
 |}
 
