--- a/wiki/bread.wikitext
+++ b/wiki/bread.wikitext
@@ -24,6 +24,7 @@
 *Indonesian: [[roti]]
 *Interlingua: [[pan]]
 *Japanese: [[パン]] (pan)
+*Lithuanian: [[duona]] ''f'' (1)
 *Macedonian: [[леб]] (leb)
 *Polish: [[chleb]]
 *Portuguese: [[pão]] ''m''
