fmt; applied Occam's razor to defs <motel#63695>

--- a/wiki/motel.wikitext
+++ b/wiki/motel.wikitext
@@ -1,17 +1,17 @@
 =={{en}}==
-[[motel]] (rhymes with ''hotel'') 
 ===Etymology===
-from '''mo'''tor ho'''tel''' ''" originating from the Motel Inn of San Luis Obispo, established 1925 by Arthur Heinman. 
+[[Blend]] of [[motor]] and [[hotel]], from the original Motel Inn of San Luis Obispo, established in 1925 by Arthur Heinman.
+
 ===Noun===
-'''motel''' (''Plural:'' '''motels''')
-#a lodging establishment typically featuring a series of rooms whose entrance is immediately adjacent to a [[parking lot]], as might facilitate easy access to one's automobile during an overnight stay, particularly located near a major highway as found in Canada and the United States. 
-# also ''attributively'' (for example, "''motel stay''";"''motel parking lot''"; "''motel sign''"; "''motel room''", "''motel towel''", "''motel ashtray''") and in regard to attributes of architectural or interior design styles usually associated with motels (especially as differentiated from '''[[hotel]]s''') such as [[identicalness]] or [[anonymity]].
+'''motel''' (''plural'' '''motels''')
 
+#A hotel, usually close to a major highway, having an adjacent parking space for overnight use by patrons.
+#(''attributively'') Of or relating to a motel.
+#:''motel sign''
+#(''attributively'') Of architecture, interior design, etc, in the style of a motel; identical and anonymous.
 
-==See also==
+===See also===
 *[[hotel]]
 *[[inn]]
 *[[motor court]]
-
-===External links===
-[[w:Motel|Wikipedia article on the Motel]]
+*[[w:motel|Wikipedia article on motels]]
