fmt; +fr: & it: <veal#62865>

--- a/wiki/veal.wikitext
+++ b/wiki/veal.wikitext
@@ -1,10 +1,10 @@
 ==English==
-
 ===Noun===
+'''veal''' (''[[uncountable]]'')
 
-'''veal'''
-
-#The flesh of a calf when killed and used for food.
+#The flesh of a [[calf]] used for food.
 
 ====Translations====
+*French: [[veau]] ''m''
+*Italian: [[vitello]] ''m''
 *Lithuanian: [[veršiena]] ''f''
