--- a/wiki/introduction.wikitext
+++ b/wiki/introduction.wikitext
@@ -1,1 +1,5 @@
-An opening section
+=== Noun ===
+'''introduction''' 
+
+#The act or process of introducing.
+#A means, such as a personal letter, of presenting one person to another.
