fmt; +fr: <beef#45015>

--- a/wiki/beef.wikitext
+++ b/wiki/beef.wikitext
@@ -5,16 +5,9 @@ From French '''[[bœuf]]''', ''ox''; presumably from Latin '''[[bos]]''', ''ox''
 ===Noun===
 '''beef''' (''[[uncountable]] and [[countable]]''; ''plural'' '''beeves''')
 
-#(''[[uncountable]]'') The [[meat]] from a [[cow]], [[bull]] or other [[bovine]]. Carnal term for cattle.
-**''I enjoy eating beef''
-#(''[[countable]]'') A cow or bull.  Cattle.
- 
-====Derived terms====
-*[[bully beef]]
-*[[corned beef]]
-*[[beef stew]]
-*[[beef up]]
-*[[beefy]]
+#(''[[uncountable]]'') The [[meat]] from a [[cow]], [[bull]] or other [[bovine]].
+#:''I enjoy eating beef''
+#(''[[countable]]'') A generic term for a cow or bull.
 
 ====Translations====
 
@@ -40,9 +33,18 @@ From French '''[[bœuf]]''', ''ox''; presumably from Latin '''[[bos]]''', ''ox''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Finnish: [[nauta#Finnish|nauta]]
+*French: [[bovin]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 |}
 |}
+
+===Derived terms===
+*[[bully beef]]
+*[[corned beef]]
+*[[beef stew]]
+*[[beef up]]
+*[[beefy]]
+*[[where's the beef]]?
